--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -15,7 +15,7 @@
       <td contenteditable="true" class="body-text"><%= idea.body %></td>
       <td class="quality-text"><%= idea.quality %></td>
       <td><input type="button" class="upvote-idea" value="Thumbs Up"><input type="button" class="downvote-idea" value="Thumbs Down"></td>
-      <td><input type="button" value="Delete" class="destroy-idea"></td>
+      <td><input type="button" value="Delete" class="delete-idea"></td>
     </tr>
     <% end %>
 </tbody>
