add model, feature, and response tests

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -14,14 +14,14 @@
       <td contenteditable="true" class="title-text"><%= idea.title %></td>
       <td contenteditable="true" class="body-text"><%= idea.body %></td>
       <td class="quality-text"><%= idea.quality %></td>
-      <td><input type="button" class="upvote-idea" value="Thumbs Up"><input type="button" class="downvote-idea" value="Thumbs Down"></td>
+      <td><input type="button" class="upvote-idea" value="Upvote"><input type="button" class="downvote-idea" value="Downvote"></td>
       <td><input type="button" value="Delete" class="delete-idea"></td>
     </tr>
     <% end %>
 </tbody>
 </table>
 
-<h1>Have Another Idea?</h1>
+<h2>Have Another Idea?</h2>
   <div class="form">
     <form>
       Title:<br>
